--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,23 @@
 events {}
 
 http {
+  include       mime.types;
+  default_type  application/octet-stream;
+
   server {
     listen 8080;
     server_name localhost;
 
+    root /usr/share/nginx/html;
+
     location / {
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri $uri/ /index.html;
+      try_files $uri /index.html;
     }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|otf|json)$ {
+      try_files $uri =404;
+    }
+
+    error_page 404 /index.html;
   }
 }
